<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/promptConstraintLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/failLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_dialog_bkg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/alert_dialog_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56">

        <TextView
            android:id="@+id/alertDialogTitle"
            style="@style/alertDialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/template" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/promptTextLayout"
            style="@style/boxInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/place_holder_username_profile">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newEditText"
                style="@style/inputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_button_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:text="@string/ok" />

            <Button
                android:id="@+id/dialog_button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>