<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/recycler_view_bkg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/newExpenseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/new_expense"
            android:textSize="20sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

        <EditText
            android:id="@+id/newExpenseTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Título"
            android:textSize="18sp"
          />

        <EditText
            android:id="@+id/newExpenseAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Cantidad"
            android:inputType="numberDecimal"
            android:textSize="18sp"
          />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_text" />

        <TextView
            android:id="@+id/date"
            style="@style/dateView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_placeholder"
            android:clickable="false"/>
    </LinearLayout>


    <Button
        android:id="@+id/btnSaveExpense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Guardar" />

</LinearLayout>
