<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.example.budgetbuddy.viewmodels.RegisterViewModel" />
    </data>

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.RegisterFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/determinateBar"
                style="@android:style/Widget.Material.Light.ProgressBar.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:indeterminateTint="@color/md_theme_light_primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <LinearLayout
                android:id="@+id/linearRegister"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="26dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5">

                <LinearLayout
                    android:id="@+id/linearLogo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="24dp">

                    <ImageView
                        android:id="@+id/icon_app"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/icon_description"
                        android:scaleType="fitXY"
                        android:src="@drawable/app_icon_test" />

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/registro" />
                </LinearLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/boxInputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/first_name"
                    app:helperText="@{viewmodel.firstNameError}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstNameEditText"
                        style="@style/inputText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:text="@{viewmodel.firstName}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/boxInputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/last_name"
                    app:helperText="@{viewmodel.lastNameError}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastNameEditText"
                        style="@style/inputText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:text="@{viewmodel.lastName}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/boxInputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/username"
                    app:helperText="@{viewmodel.userNameError}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/usernameEditText"
                        style="@style/inputText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@{viewmodel.username}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/boxInputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email"
                    app:helperText="@{viewmodel.emailError}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailEditText"
                        style="@style/inputText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:text="@{viewmodel.email}" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/boxInputText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/password"
                        app:endIconMode="password_toggle"
                        app:helperText="@{viewmodel.passwordError}"
                        android:layout_weight="0.95">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordEditText"
                            style="@style/inputText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:text="@{viewmodel.password}" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <Button
                        android:id="@+id/btnInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info"
                        android:layout_weight="0.05"
                        />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/boxInputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/repeatPassword"
                    app:endIconMode="password_toggle"
                    app:helperText="@{viewmodel.passwordError}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/repeatPasswordEditText"
                        style="@style/inputText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:text="@{viewmodel.repeatPassword}" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/linear_forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal"
                    android:padding="@dimen/margin_small">

                    <TextView
                        android:id="@+id/textViewLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login" />
                </LinearLayout>


                <Button
                    android:id="@+id/signUpBtn"
                    style="@style/btnElevated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:elevation="8dp"
                    android:text="@string/registro" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>
